[package]
name = "qtum-neutron-rt"
version = "0.1.0"
authors = ["Jordan Earls <earlz@earlz.net>"]
edition = "2018"
publish = ["qtum-neutron-rt"]
description = "The minimal runtime required for smart contracts built on the Qtum Neutron platform"
keywords = ["qtum", "blockchain"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[build-dependencies]
cc = "1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 'z' 
lto = true
codegen-units = 1

[badges]
maintenance = { status = "experimental" }
